package be.isims.ihm.dp.tp1.ex2.code;

public class Store extends Province { //leaf
    public Store(String name, int profit) {
        super(name, profit);
    }
}
