@startuml

title __CODE's Class Diagram__\n

  namespace be.isims.ihm.dp.tp1.ex2.code {
    class be.isims.ihm.dp.tp1.ex2.code.City {
        + City()
        + addStore()
        + getProfit()
    }
  }
  

  namespace be.isims.ihm.dp.tp1.ex2.code {
    class be.isims.ihm.dp.tp1.ex2.code.Main {
        {static} + main()
    }
  }
  

  namespace be.isims.ihm.dp.tp1.ex2.code {
    abstract class be.isims.ihm.dp.tp1.ex2.code.Province {
        # name : String
        # profit : int
        + Province()
        + getProfit()
        + setProfit()
    }
  }
  

  namespace be.isims.ihm.dp.tp1.ex2.code {
    class be.isims.ihm.dp.tp1.ex2.code.Store {
        + Store()
    }
  }
  

  be.isims.ihm.dp.tp1.ex2.code.City -up-|> be.isims.ihm.dp.tp1.ex2.code.Province
  be.isims.ihm.dp.tp1.ex2.code.City o-- be.isims.ihm.dp.tp1.ex2.code.Province : province
  be.isims.ihm.dp.tp1.ex2.code.Store -up-|> be.isims.ihm.dp.tp1.ex2.code.Province


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
